--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
   
+  <h2 style="color: black">New Header</h2>
+
   <canvas id="canvas" width="800" height="400"></canvas>
 
   <script src="./main.js"></script>
