--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   
   <h2 style="color: black">New Header</h2>
 
+  <h3>This new header wont be here in main branch</h3>
+
   <canvas id="canvas" width="800" height="400"></canvas>
 
   <script src="./main.js"></script>
