--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   
-  <h2 style="color: black">Scrolling Background</h2>
+  <h2 style="color: black">Scrolling Background UPDATED</h2>
 
   <canvas id="canvas" width="800" height="400"></canvas>
 
