--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <h2 style="color: black">Scrolling Background UPDATED From Header Branch Plus this But Deleted stuff</h2>
   <h3>This new header wont be here in main branch</h3>
-
+  <p>Added from header in same line</p>
   <canvas id="canvas" width="800" height="400"></canvas>
 
   <script src="./main.js"></script>
