--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   
-
+  <p>Added in line 12</p>
   <h2 style="color: black">Scrolling Background UPDATED From Header Branch Plus this But Deleted stuff</h2>
   <h3>This new header wont be here in main branch</h3>
 
